Consolidate CSS Files & Update References
- Compile all existing CSS files from different directories into a single CSS file named site.css.
- Ensure that site.css contains all necessary styles and is organised for easy maintenance and updates.
- Update all HTML and template files to reference the new site.css file instead of individual CSS files.
- Verify that all styles are applied correctly and consistently across the application after consolidation.

--- a/app/templates/product/filter_bar.html
+++ b/app/templates/product/filter_bar.html
@@ -10,7 +10,7 @@
         </button>
         <div class="dropdown-menu w-100" aria-labelledby="dropdownMenu">
           {% for choice in form.categories %}
-            <div class="form-check">
+            <div class="form-check ms-2">
               {{ choice(class="form-check-input") }}
               {{ choice.label(class="form-check-label") }}
             </div>
@@ -26,7 +26,7 @@
         </button>
         <div class="dropdown-menu w-100" aria-labelledby="dropdownMenu">
           {% for choice in form.conditions %}
-            <div class="form-check">
+            <div class="form-check ms-2">
               {{ choice(class="form-check-input") }}
               {{ choice.label(class="form-check-label") }}
             </div>
