--- a/app/static/css/site.css
+++ b/app/static/css/site.css
@@ -45,9 +45,9 @@ button.close {
   height: calc(1.5em + 0.75rem + 2px);
 }
 
-.form-control::placeholder {
-  color: #d1d3e2;
-}
+  .form-control::placeholder {
+      color: #d1d3e2;
+  }
 
 form.user .form-control-user {
   font-size: 0.8rem;
@@ -67,9 +67,9 @@ form.user .form-control-user {
   width: 100%;
 }
 
-.btn-block + .btn-block {
-  margin-top: 0.5rem;
-}
+  .btn-block + .btn-block {
+      margin-top: 0.5rem;
+  }
 
 .logo {
   color: #858796;
@@ -88,42 +88,42 @@ form.user .form-control-user {
   overflow: hidden;
 }
 
-.topbar .topbar-brand #weather_mode.fa-sun {
-  color: #fdb813;
-}
+  .topbar .topbar-brand #weather_mode.fa-sun {
+      color: #fdb813;
+  }
 
-.topbar .topbar-brand #weather_mode.fa-moon {
-  color: #3aa8c2;
-}
+  .topbar .topbar-brand #weather_mode.fa-moon {
+      color: #3aa8c2;
+  }
 
-.topbar .topbar-brand #weather_mode {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  transform: rotate(137deg) translate(-50px);
-}
+  .topbar .topbar-brand #weather_mode {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      transform: rotate(137deg) translate(-50px);
+  }
 
 @keyframes curvedpath {
   0% {
-    transform: rotate(137deg) translate(-50px);
+      transform: rotate(137deg) translate(-50px);
   }
 
   25% {
-    transform: rotate(227deg) translate(-50px);
+      transform: rotate(227deg) translate(-50px);
   }
 
   50% {
-    transform: rotate(317deg) translate(-50px);
+      transform: rotate(317deg) translate(-50px);
   }
 
   75% {
-    transform: rotate(407deg) translate(-50px);
+      transform: rotate(407deg) translate(-50px);
   }
 
   100% {
-    transform: rotate(497deg) translate(-50px);
+      transform: rotate(497deg) translate(-50px);
   }
 }
 
@@ -166,15 +166,15 @@ form.user .form-control-user {
   opacity: 0.5;
 }
 
-.btn-close:hover {
-  color: #000;
-  text-decoration: none;
-}
+  .btn-close:hover {
+      color: #000;
+      text-decoration: none;
+  }
 
-.btn-close:not(:disabled):not(.disabled):hover,
-.btn-close:not(:disabled):not(.disabled):focus {
-  opacity: 0.75;
-}
+  .btn-close:not(:disabled):not(.disabled):hover,
+  .btn-close:not(:disabled):not(.disabled):focus {
+      opacity: 0.75;
+  }
 
 button.btn-close {
   padding: 0;
@@ -208,13 +208,13 @@ table .checkbox-switch {
   color: #fff;
 }
 
-table .checkbox-switch input[type="checkbox"]:checked ~ label:before {
-  content: attr(data-label-on);
-  display: flex;
-  height: 100%;
-  justify-content: flex-start;
-  align-items: center;
-}
+  table .checkbox-switch input[type="checkbox"]:checked ~ label:before {
+      content: attr(data-label-on);
+      display: flex;
+      height: 100%;
+      justify-content: flex-start;
+      align-items: center;
+  }
 
 table tr td .checkbox-switch input[type="checkbox"] ~ label:before {
   padding: 14px 10px;
@@ -255,7 +255,6 @@ table .checkbox-switch input[type="checkbox"] {
 }
 
 table tr td.dt-control:before {
-  -webkit-font-smoothing: antialiased;
   display: var(--fa-display, inline-block);
   font-style: normal;
   font-variant: normal;
@@ -276,7 +275,6 @@ table tr.shown td.dt-control:before {
 
 body {
   font-family: "Nunito", sans-serif;
-  font-optical-sizing: auto;
   font-style: normal;
   margin: 0;
   font-size: 1rem;
@@ -285,6 +283,15 @@ body {
   color: #858796;
   text-align: left;
   background-color: #fff;
+  color: #000;
+}
+
+.category-body > div {
+  height: 100%;
+}
+
+.values-body {
+  height: 100%;
 }
 
 table.table-bordered tr .card {
@@ -327,6 +334,7 @@ table tr td .action-container .delete {
   position: relative;
   display: inline-block;
 }
+
 .change-avatar-btn {
   position: absolute;
   bottom: 10px;
@@ -364,45 +372,45 @@ i.fa-rounded {
   flex-wrap: wrap;
 }
 
-.standard-form-table-container .standard-form-table-column {
-  flex-basis: calc(50% - 10px);
-  flex-grow: 1;
-  border: 1px solid #e5e9ea;
-}
+  .standard-form-table-container .standard-form-table-column {
+      flex-basis: calc(50% - 10px);
+      flex-grow: 1;
+      border: 1px solid #e5e9ea;
+  }
 
-.standard-form-table-container .standard-form-table-column .standard-form-row {
-  display: flex;
-  align-items: stretch;
-}
+      .standard-form-table-container .standard-form-table-column .standard-form-row {
+          display: flex;
+          align-items: stretch;
+      }
 
-.standard-form-table-container
-  .standard-form-table-column
-  .standard-form-row:not(:first-child) {
-  border-top: 1px solid #e5e9ea;
-}
+          .standard-form-table-container
+          .standard-form-table-column
+          .standard-form-row:not(:first-child) {
+              border-top: 1px solid #e5e9ea;
+          }
 
-.standard-form-table-container
-  .standard-form-table-column
-  .standard-form-row
-  .standard-form-label {
-  width: 35%;
-  min-width: 35%;
-  padding: 10px;
-  background-color: #f8f9fd;
-  display: flex;
-  align-items: center;
-  border-right: 1px solid #e5e9ea;
-  font-weight: 800;
-  color: #666;
-}
+          .standard-form-table-container
+          .standard-form-table-column
+          .standard-form-row
+          .standard-form-label {
+              width: 35%;
+              min-width: 35%;
+              padding: 10px;
+              background-color: #f8f9fd;
+              display: flex;
+              align-items: center;
+              border-right: 1px solid #e5e9ea;
+              font-weight: 800;
+              color: #666;
+          }
 
-.standard-form-table-container
-  .standard-form-table-column
-  .standard-form-row
-  .standard-form-value {
-  flex-grow: 2;
-  padding: 10px;
-}
+          .standard-form-table-container
+          .standard-form-table-column
+          .standard-form-row
+          .standard-form-value {
+              flex-grow: 2;
+              padding: 10px;
+          }
 
 .card-body .inline-form .standard-form-value b {
   color: #4e73df;
@@ -441,23 +449,23 @@ i.fa-rounded {
   opacity: 0;
 }
 
-.custom-file-input:focus ~ .custom-file-label {
-  border-color: #bac8f3;
-  box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 0.25);
-}
+  .custom-file-input:focus ~ .custom-file-label {
+      border-color: #bac8f3;
+      box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 0.25);
+  }
 
-.custom-file-input[disabled] ~ .custom-file-label,
-.custom-file-input:disabled ~ .custom-file-label {
-  background-color: #eaecf4;
-}
+  .custom-file-input[disabled] ~ .custom-file-label,
+  .custom-file-input:disabled ~ .custom-file-label {
+      background-color: #eaecf4;
+  }
 
-.custom-file-input:lang(en) ~ .custom-file-label::after {
-  content: "Browse";
-}
+  .custom-file-input:lang(en) ~ .custom-file-label::after {
+      content: "Browse";
+  }
 
-.custom-file-input ~ .custom-file-label[data-browse]::after {
-  content: attr(data-browse);
-}
+  .custom-file-input ~ .custom-file-label[data-browse]::after {
+      content: attr(data-browse);
+  }
 
 .custom-file-label {
   position: absolute;
@@ -476,22 +484,22 @@ i.fa-rounded {
   border-radius: 0.35rem;
 }
 
-.custom-file-label::after {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 3;
-  display: block;
-  height: calc(1.5em + 0.75rem);
-  padding: 0.375rem 0.75rem;
-  line-height: 1.5;
-  color: #6e707e;
-  content: "Browse";
-  background-color: #eaecf4;
-  border-left: inherit;
-  border-radius: 0 0.35rem 0.35rem 0;
-}
+  .custom-file-label::after {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 3;
+      display: block;
+      height: calc(1.5em + 0.75rem);
+      padding: 0.375rem 0.75rem;
+      line-height: 1.5;
+      color: #6e707e;
+      content: "Browse";
+      background-color: #eaecf4;
+      border-left: inherit;
+      border-radius: 0 0.35rem 0.35rem 0;
+  }
 
 .title-details {
   font-weight: normal;
@@ -562,21 +570,26 @@ table .on-hover:hover .underline {
   width: 100%;
   height: auto;
 }
+
 @keyframes shake {
   0% {
-    transform: translateX(0);
+      transform: translateX(0);
   }
+
   25% {
-    transform: translateX(-5px);
+      transform: translateX(-5px);
   }
+
   50% {
-    transform: translateX(5px);
+      transform: translateX(5px);
   }
+
   75% {
-    transform: translateX(-3px);
+      transform: translateX(-3px);
   }
+
   100% {
-    transform: translateX(0);
+      transform: translateX(0);
   }
 }
 
@@ -591,27 +604,296 @@ table .on-hover:hover .underline {
 
 tr[data-status='Rejected'] td,
 td[data-status='red'] {
-    color: #d55c51;
+  color: #d55c51;
 }
 
 tr[data-status='Approved'] td,
 td[data-status='green'] {
-    color: #1cc88a;
+  color: #1cc88a;
 }
 
 tr[data-status='Pending'] td,
 td[data-status='yellow'] {
-    color: #f4b30d;
+  color: #f4b30d;
 }
 
 tr[data-status='Cancelled'] td,
 td[data-status=white] {
-    color: #fff;
+  color: #fff;
 }
 
 a.border-thick {
   border-width: 3px !important;
 }
-a.border-thick + a.border-thick {
-  border-top: 0 !important;
+
+  a.border-thick + a.border-thick {
+      border-top: 0 !important;
+  }
+
+.preview-img img {
+  width: 150px;
+  height: 150px;
+  margin-top: 0.5rem;
+}
+
+  .preview-img img + img {
+      margin-left: 0.5rem;
+  }
+
+.overlay {
+  position: absolute;
+  overflow-x: hidden;
+  width: 75%;
+  height: 265px;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 999;
+}
+
+.display-container {
+  border-radius: 0.375rem;
+  background-color: #e9ecef;
+  width: 75%;
+  height: 265px;
+  overflow: hidden;
+  border-radius: 0.375rem;
+}
+
+.display-products {
+  border-radius: 0.375rem;
+  padding: 10px;
+  white-space: nowrap;
+  overflow-x: scroll;
+  /* overflow-y: hide; */
+}
+
+.display-card {
+  background-color: #e9ecef;
+  display: inline-block;
+  width: 200px;
+  line-height: 10px;
+  text-align: center;
+  border-radius: 0.375rem;
+  padding: 0px 0px 0px 0px;
+  font-size: 12px;
+}
+
+.display-card {
+  padding: 0px 10px 10px 10px;
+}
+
+  .display-card:hover {
+      transition: all 0.15s;
+      /* Safari 3.1 to 6.0 */
+      /* -webkit-transition: all 0.15s;  */
+      padding: 0px 0px 0px 0px;
+      font-size: 17px;
+      line-height: 15px;
+  }
+
+      .display-card:hover h5,
+      .display-list a:hover h2 {
+          text-decoration: underline;
+      }
+
+  .display-card hr,
+  .display-list hr {
+      border: none;
+      height: 2px;
+      background-color: #000;
+      margin: 0.5rem 0;
+  }
+
+#swipeSupport {
+  position: absolute;
+  margin: 6rem 0rem;
+  color: #000;
+}
+
+.path {
+  height: 20px;
+  width: 20px;
+  background: rgba(149, 147, 241, 0.5);
+  border-radius: 40px;
+  visibility: hidden;
+}
+
+.hand-icon {
+  position: relative;
+  width: 100px;
+  transform-origin: 52% 62%;
+}
+
+@keyframes swipe-hand {
+  25% {
+      transform: translate(20px) rotate(30deg);
+  }
+
+  50% {
+      transform: translate(-20px) rotate(-15deg);
+  }
+
+  100% {
+      transform: translate(0px) rotate(0);
+  }
+}
+
+@keyframes swipe-dot {
+  12% {
+      visibility: visible;
+      width: 40px;
+  }
+
+  25% {
+      visibility: visible;
+      transform: translate(-65px);
+      width: 20px;
+  }
+
+  26% {
+      visibility: hidden;
+  }
+}
+
+#productGrid {
+  padding: 0px 5px;
+  border-radius: 0.375rem;
+  background-color: #e9ecef;
+}
+
+  #productGrid .display-card {
+      margin: 5px 0px;
+  }
+
+      #productGrid .display-card:hover {
+          font-size: 15px;
+      }
+
+.display-list img {
+  width: 100%;
+  height: 200px;
+}
+
+.multi-line-text-truncate {
+  overflow: hidden;
+  max-width: 100%;
+  margin: 20px auto;
+}
+
+.display-list p.card-text {
+  font-size: 30px;
+}
+
+.display-list span {
+  font-size: 15px;
+}
+
+@media (min-width: 1200px) {
+  #productDetail h2,
+  #productDescription h2 {
+      font-size: 34px;
+  }
+
+  #productDetail .price {
+      font-size: 29px !important;
+  }
+
+  #productDetail .btn,
+  #productDetail p,
+  #productDescription p {
+      font-size: 19px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  #productDetail h2,
+  #productDescription h2 {
+      font-size: 31px;
+  }
+
+  #productDetail .price {
+      font-size: 26px !important;
+  }
+
+  #productDetail .btn,
+  #productDetail p,
+  #productDescription p {
+      font-size: 16px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  #productDetail h2,
+  #productDescription h2 {
+      font-size: 28px;
+  }
+
+  #productDetail .price {
+      font-size: 23px !important;
+  }
+
+  #productDetail .btn,
+  #productDetail p,
+  #productDescription p {
+      font-size: 13px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  #productDetail h2,
+  #productDescription h2 {
+      font-size: 25px;
+  }
+
+  #productDetail .price {
+      font-size: 20px !important;
+  }
+
+  #productDetail .btn,
+  #productDetail p,
+  #productDescription p {
+      font-size: 12px;
+  }
+}
+
+.remarks-details {
+  font-size: 15px;
+  padding: 5px;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  top: 40%;
+  bottom: 40%;
+  width: 7%;
+}
+
+.carousel-control-prev,
+.carousel-control-next,
+.carousel-indicators {
+  background-color: #333;
+  opacity: 0.35
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  width: 30px;
+  height: 30px;
+}
+
+.carousel-indicators {
+  margin: 0 !important;
+}
+
+.input-as-label {
+  background-color: transparent !important;
+  border: 0 !important;
+}
+
+#ContactSellerModal .row div {
+  margin-top: 0.5rem !important;
+  margin-bottom: 0.5rem !important;
+}
+
+.dropdown button {
+  color: white;
 }
