--- a/app/templates/seller/product_table_child.html
+++ b/app/templates/seller/product_table_child.html
@@ -28,6 +28,9 @@
                         <div class="d-flex mt-2 rejected col-6">
                             <span>Reject    : {{ pro.orders.rejected }}</span>
                         </div>
+                        <div class="d-flex mt-2 cancelled col-6">
+                            <span>Cancel    : {{ pro.orders.cancelled }}</span>
+                        </div>
                     </div>
                 </div>
             </div>
