selenium test case

--- a/app/templates/users/signup.html
+++ b/app/templates/users/signup.html
@@ -35,7 +35,7 @@
                                 <div id="AlertModalDiv">
                                     {% include "/layout/alert_modal.html" %}
                                 </div>
-                                <form class="user" method="POST" action="/signup">
+                                <form class="user" id="signupForm" method="POST" action="/signup">
                                     {{ form.hidden_tag() }}
                                     <div class="form-group row">
                                         <div class="col">
