--- a/app/templates/users/reset_password_form.html
+++ b/app/templates/users/reset_password_form.html
@@ -9,7 +9,7 @@
                 <div class="card border-0 shadow">
                     <div class="card-body p-5">
                         <div class="text-center mb-5">
-                            <h3>Reset Password</h3>
+                            <h2>Reset Your Password</h2>
                         </div>
                         {% if form.errors %}
                             <div id="AlertModalDiv">
@@ -32,6 +32,7 @@
                                 <span class="text-danger">{{ error }}</span>
                                 {% endfor %}
                             </div>
+                            <hr>
                             <div class="text-end col-12">
                                 {{ form.submit(class="btn btn-primary") }}
                                 <a class="btn btn-danger ms-2" href="{{ url_for('main.home') }}">Cancel</a>
@@ -45,7 +46,4 @@
 {% endblock %}
 
 {% block javascript %}
-{% endblock %}
-
-{% block css %}
 {% endblock %}
