--- a/app/templates/manage_product/add_product.html
+++ b/app/templates/manage_product/add_product.html
@@ -133,6 +133,7 @@
         </div>
         <div class="d-flex justify-content-end">
             {{ form.submit(class="btn btn-primary") }}
+            <a class="btn btn-danger ms-2" href="{{url_for('main.product_listing')}}">Cancel</a>
         </div>
     </form>
 </div>
