--- a/app/templates/manage_product/edit_product.html
+++ b/app/templates/manage_product/edit_product.html
@@ -130,9 +130,10 @@
                     </span>
                 </div>
             </div>
-        </div>
-        <div class="d-flex justify-content-end">
-            {{ form.submit(class="btn btn-primary") }}
+            <div class="d-flex justify-content-end">
+                {{ form.submit(class="btn btn-primary") }}
+                <a class="btn btn-danger ms-2" href="{{url_for('main.product_listing')}}">Cancel</a>
+            </div>
         </div>
     </form>
 </div>
