--- a/app/templates/product/product_display.html
+++ b/app/templates/product/product_display.html
@@ -1,5 +1,5 @@
 
-<h2 class="text-center m-4">Top Sales</h2>
+<h2 class="text-center m-4">Top Products</h2>
 <div class="row g-0 justify-content-center">
     <div id="swipeOverlay" class="d-flex justify-content-center overlay">
         <div id="swipeSupport" class="swipe">
@@ -17,42 +17,35 @@
     </div>
     <div class="display-container">
         <div class="display-products">
-            {% for product in products %}
+            {% for product in top_products %}
                 {% include "/product/display_card.html" %}
             {% endfor %}
         </div>
     </div>
 </div>
 
-<h2 class="text-center m-4">Recently Viewed Items</h2>
+<h2 class="text-center m-4">Recently Uploaded</h2>
 <div class="row g-0 justify-content-center">
     <div class="display-container">
         <div class="display-products">
-            {% for product in products %}
-                {% include "/product/display_card.html" %}
-            {% endfor %}
-        </div>
-    </div>
-</div>
-
-<h2 class="text-center m-4">Nearby Sales</h2>
-<div class="row g-0 justify-content-center">
-    <div class="display-container">
-        <div class="display-products">
-            {% for product in products %}
-                {% include "/product/display_card.html" %}
-            {% endfor %}
-        </div>
-    </div>
-</div>
-
-<h2 class="text-center m-4">You May be Interested</h2>
-<div class="row g-0 justify-content-center">
-    <div class="display-container">
-        <div class="display-products">
-        {% for product in products %}
+        {% for product in recent_products %}
             {% include "/product/display_card.html" %}
         {% endfor %}
         </div>
     </div>
 </div>
+
+{% for category_products in categories %}
+    {% if category_products %}
+        <h2 class="text-center m-4">Product in {{category_products[0].category}}</h2>
+        <div class="row g-0 justify-content-center">
+            <div class="display-container">
+                <div class="display-products">
+                {% for product in category_products %}
+                    {% include "/product/display_card.html" %}
+                {% endfor %}
+                </div>
+            </div>
+        </div>
+    {% endif %}
+{% endfor %}
