comment out sign up with Gmail/Facebook

--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -55,16 +55,18 @@
                       <label class="small" for="remember_me">Remember Me</label>
                     </div>
                   </div>
-                  {{ form.submit(class="btn btn-outline-secondary btn-block", onclick="saveCredentials()") }}
+                  {{ form.submit(class="btn btn-outline-secondary btn-block mb-4", onclick="saveCredentials()") }}
                   <hr />
+                  <!--
                     <a href="index" class="btn btn-outline-danger btn-block">
                       <i class="fab fa-google fa-fw"></i> Login with Google
                     </a>
                     <a href="index" class="btn btn-outline-primary btn-block">
                       <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
                     </a>
-                    <hr />
-                    <div class="text-center">
+                    <hr> 
+                  !-->
+                    <div class="text-center mb-2">
                       <a class="btn btn-link" href="#" id="forgotPasswordBtn">Forgot Password?</a>
                     </div>
                     <div class="text-center">
