--- a/app/templates/users/signup.html
+++ b/app/templates/users/signup.html
@@ -118,15 +118,17 @@
                                             <span class="text-danger">{{ error }}</span>
                                         {% endfor %}
                                     </div>
-                                    {{ form.submit(class="btn btn-outline-secondary btn-block") }}
+                                    {{ form.submit(class="btn btn-outline-secondary btn-block mb-4") }}
                                     <hr>
-                                    <a href="index" class="btn btn-outline-danger btn-block">
-                                        <i class="fab fa-google fa-fw"></i> Signup with Google
-                                    </a>
-                                    <a href="index" class="btn btn-outline-primary btn-block">
-                                        <i class="fab fa-facebook-f fa-fw"></i> Signup with Facebook
-                                    </a>
-                                    <hr>
+                                    <!--
+                                        <a href="index" class="btn btn-outline-danger btn-block">
+                                            <i class="fab fa-google fa-fw"></i> Signup with Google
+                                        </a>
+                                        <a href="index" class="btn btn-outline-primary btn-block">
+                                            <i class="fab fa-facebook-f fa-fw"></i> Signup with Facebook
+                                        </a>
+                                        <hr>
+                                    !-->
                                     <div class="text-center">
                                         <a class="btn btn-link" href="login">Already have an account? Sign in</a>
                                     </div>
