--- a/app/templates/manage_product/add_product.html
+++ b/app/templates/manage_product/add_product.html
@@ -122,6 +122,10 @@
                                 <div class="text-xs">
                                     <p class="mb-1">1. Max. 6 Images per Product</p>
                                     <p class="mb-1">2. Tick the box beside the image to set it as the main image.</p>
+                                    <p class="mb-1">3. The total size of all images must be less than 30MB.</p>
+                                    <p class="mb-1">4. If you encounter any issues while uploading, please ensure that your images meet the new size requirements.</p>
+
+                                    
                                 </div>
                             </div>
                             {{ form.main_idx() }}
