--- a/app/templates/manage_product/edit_product.html
+++ b/app/templates/manage_product/edit_product.html
@@ -120,6 +120,8 @@
                                     <p class="mb-1">1. Max. 6 Images per Product</p>
                                     <p class="mb-1">2. Tick the box beside the image to set new main image.</p>
                                     <p class="mb-1">3. You will need to re-upload the image to modify your old images.</p>
+                                    <p class="mb-1">4. The total size of all images must be less than 30MB.</p>
+                                    <p class="mb-1">5. If you encounter any issues while uploading, please ensure that your images meet the new size requirements.</p>
                                 </div>
                             </div>
 
